Fix cursor lagging behind the current tex

--- a/.theme/task-list.scss
+++ b/.theme/task-list.scss
@@ -72,7 +72,7 @@ FOR DEFAULT BEHAVIOUR PLEASE REMOVE THIS WHOLE SECTION */
 }
 
 pre.HyperMD-list-line-2 {
-  margin-left: 1rem !important;
+  padding-left: 3.5rem !important;
 }
 
 .cm-s-obsidian pre.HyperMD-list-line {
